# dcai

./: .gitignore  LICENSE  README.md  install-dcai.sh  pyproject.toml
dcai/: __main__.py  ai_mode.py  backup.py  basic.py  cli.py  config.py  plugins.py  registry.yaml  terminal.py
docs/: CREATING_PLUGINS.md  INSTALLING_PLUGINS.md
